==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

 - Fixed an error handling issue that could lead to the termination of a node
   in very rare cases. (Usually if a user invoked the ``KILL`` statement)

 - Fixed issue where bulk operations like `insert from dynamic queries` and 
   ``COPY FROM`` did not stop after being killed.    

 - ``CREATE USER`` and ``DROP USER`` statements will now only respond after all
   nodes in the cluster processed the change.

 - Fixed an issue that caused an exception to be thrown when using ``unnest``
   with 10 or more columns.
